Rectification cartes cliquables

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <h2 id="heb">Hébergements à Marseille</h2>
         <div class="card-container-first-block">
           <div class="card">
+            <a href="#">
             <div class="image-container">
               <img
                 src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
@@ -106,8 +107,10 @@
                 <i class="fa fa-star"></i>
               </div>
             </div>
+          </a>
           </div>
           <div class="card">
+            <a href="#">
             <div class="image-container">
               <img
                 src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
@@ -125,8 +128,10 @@
                 <i class="fa fa-star"></i>
               </div>
             </div>
+          </a>
           </div>
           <div class="card">
+            <a href="#">
             <div class="image-container">
               <img
                 src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
@@ -144,8 +149,10 @@
                 <i class="fa fa-star"></i>
               </div>
             </div>
+          </a>
           </div>
           <div class="card">
+            <a href="#">
             <div class="image-container">
               <img
                 src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
@@ -163,8 +170,10 @@
                 <i class="fa fa-star"></i>
               </div>
             </div>
+          </a>
           </div>
           <div class="card">
+            <a href="#">
             <div class="image-container">
               <img
                 src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
@@ -182,8 +191,10 @@
                 <i class="fa fa-star"></i>
               </div>
             </div>
+          </a>
           </div>
           <div class="card">
+            <a href="#">
             <div class="image-container">
               <img
                 src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
@@ -201,6 +212,7 @@
                 <i class="fa fa-star"></i>
               </div>
             </div>
+          </a>
           </div>
         </div>
         <div class="show-more"><p>Afficher plus</p></div>
@@ -213,6 +225,7 @@
         </div>
         </div>
         <div class="card-container-second-block">
+          <a href="#">
           <div class="card-pop">
             <div class="image-container-pop">
               <img
@@ -232,6 +245,8 @@
               </div>
             </div>
           </div>
+        </a>
+          <a href="#">
           <div class="card-pop">
             <div class="image-container-pop">
               <img
@@ -251,6 +266,8 @@
               </div>
             </div>
           </div>
+        </a>
+          <a href="#">
           <div class="card-pop">
             <div class="image-container-pop">
               <img
@@ -270,14 +287,16 @@
               </div>
             </div>
           </div>
+        </a>
         </div>
       </div>
     </section>
     <section class="activities-block">
       <h2 id="Act">Activités à Marseille</h2>
       <div class="activities-card-wrapper">
-      <div class="activities-card-container">
-        <div class="activities-card">
+        <div class="activities-card-container">
+          <div class="activities-card">
+          <a href="#">
           <div class="activities-image-container">
             <img
               src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
@@ -287,10 +306,12 @@
           <div class="activities-card-body">
             <h3 class="activities-title">Vieux-Port</h3>
           </div>
+        </a>
         </div>
       </div>
       <div class="activities-card-container">
         <div class="activities-card">
+          <a href="#">
           <div class="activities-image-container">
             <img id="resize-img"
               src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
@@ -300,10 +321,12 @@
           <div class="activities-card-body">
             <h3 class="activities-title">Fort de Pomègues</h3>
           </div>
+        </a>      
         </div>
       </div>
       <div class="activities-card-container">
         <div class="activities-card">
+          <a href="#">
           <div class="activities-image-container">
             <img
               src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
@@ -313,10 +336,12 @@
           <div class="activities-card-body">
             <h3 class="activities-title">Parc national des Calanques</h3>
           </div>
+        </a>      
         </div>
       </div>
       <div class="activities-card-container">
         <div class="activities-card">
+          <a href="#">
           <div class="activities-image-container">
             <img
               src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
@@ -326,6 +351,7 @@
           <div class="activities-card-body">
             <h3 class="activities-title">Notre-Dame-de-la-Garde</h3>
           </div>
+        </a>      
         </div>
       </div>
       </div>
