--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <div class="card-body">
                 <h3 class="title">Auberge La Canebière</h3>
-                <p class="text">Nuit à partir de 25<B>€</B></p>
+                <p class="text">Nuit à partir de 25<span class=euro>€</span></p>
                 <div class="stars">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
@@ -131,7 +131,7 @@
               </div>
               <div class="card-body">
                 <h3 class="title">Hôtel du port</h3>
-                <p class="text">Nuit à partir de 52<B>€</B></p>
+                <p class="text">Nuit à partir de 52<span class=euro>€</span></p>
                 <div class="stars">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
@@ -152,7 +152,7 @@
               </div>
               <div class="card-body">
                 <h3 class="title">Hôtel Les Mouettes</h3>
-                <p class="text">Nuit à partir de 76<B>€</B></p>
+                <p class="text">Nuit à partir de 76<span class=euro>€</span></p>
                 <div class="stars">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
@@ -173,7 +173,7 @@
               </div>
               <div class="card-body">
                 <h3 class="title">Hôtel de la mer</h3>
-                <p class="text">Nuit à partir de 46<B>€</B></p>
+                <p class="text">Nuit à partir de 46<span class=euro>€</span></p>
                 <div class="stars">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
@@ -194,7 +194,7 @@
               </div>
               <div class="card-body">
                 <h3 class="title">Auberge Le Panier</h3>
-                <p class="text">Nuit à partir de 23<B>€</B></p>
+                <p class="text">Nuit à partir de 23<span class=euro>€</span></p>
                 <div class="stars">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
@@ -215,7 +215,7 @@
               </div>
               <div class="card-body">
                 <h3 class="title">Hôtel Chez Amina</h3>
-                <p class="text">Nuit à partir de 96<B>€</B></p>
+                <p class="text">Nuit à partir de 96<span class=euro>€</span></p>
                 <div class="stars">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
@@ -247,7 +247,7 @@
               </div>
               <div class="card-body-pop">
                 <h3 class="title-pop">Hôtel Le soleil du matin</h3>
-                <p class="text-pop">Nuit à partir de 128<B>€</B></p>
+                <p class="text-pop">Nuit à partir de 128<span class=euro>€</span></p>
                 <div class="stars-pop">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
@@ -268,7 +268,7 @@
               </div>
               <div class="card-body-pop">
                 <h3 class="title-pop">Chambres d’hôtes Au cœur de l’eau</h3>
-                <p class="text-pop">Nuit à partir de 71<B>€</B></p>
+                <p class="text-pop">Nuit à partir de 71<span class=euro>€</span></p>
                 <div class="stars-pop">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
@@ -289,7 +289,7 @@
               </div>
               <div class="card-body-pop">
                 <h3 class="title-pop">Hôtel Bleu et Blanc</h3>
-                <p class="text-pop">Nuit à partir de 68<B>€</B></p>
+                <p class="text-pop">Nuit à partir de 68<span class=euro>€</span></p>
                 <div class="stars-pop">
                   <div class="bright"><i class="fa fa-star"></i></div>
                   <div class="bright"><i class="fa fa-star"></i></div>
