--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 >
               </div>
               <div class="activities-card-body">
-                <h3 class="activities-title">Parc national des Calanques</h3>
+                <h3 class="activities-title" id="calanques">Parc national des Calanques</h3>
               </div>
             </a>
           </div>
@@ -362,7 +362,7 @@
                 >
               </div>
               <div class="activities-card-body">
-                <h3 class="activities-title">Notre-Dame-de-la-Garde</h3>
+                <h3 class="activities-title" id="notre-dame">Notre-Dame-de-la-Garde</h3>
               </div>
             </a>
           </div>
